[gd_scene load_steps=3 format=3 uid="uid://xlo63i281pua"]

[ext_resource type="Script" path="res://Scripts/base_jogo.gd" id="1_mlqjh"]

[sub_resource type="LabelSettings" id="LabelSettings_i6u25"]
font_size = 32
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[node name="BaseJogo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mlqjh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.514247, 0.380416, 1)
metadata/_edit_lock_ = true

[node name="MainLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -448.0
offset_right = 448.0
offset_bottom = 128.0
grow_horizontal = 2
text = "Digite um valor para cada índice do triângulo abaixo:"
label_settings = SubResource("LabelSettings_i6u25")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_top = 128.0
offset_right = 576.0
offset_bottom = 192.0
grow_horizontal = 2
alignment = 1

[node name="IndexX" type="LineEdit" parent="BoxContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
tooltip_text = "Digite um número inteiro e positivo!"
placeholder_text = "Índice X"
alignment = 1
virtual_keyboard_enabled = false
caret_blink = true

[node name="IndexY" type="LineEdit" parent="BoxContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
tooltip_text = "Digite um número inteiro e positivo!"
placeholder_text = "Índice Y"
alignment = 1
virtual_keyboard_enabled = false
caret_blink = true

[node name="IndexZ" type="LineEdit" parent="BoxContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
tooltip_text = "Digite um número inteiro e positivo!"
placeholder_text = "Índice Z"
alignment = 1
virtual_keyboard_enabled = false
caret_blink = true

[node name="CalcularButton" type="Button" parent="."]
custom_minimum_size = Vector2(192, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -116.0
offset_right = 96.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
text = "Calcular Triângulo"

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(192, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = 232.0
offset_right = -384.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
text = "Sair do programa!"

[node name="TrianguloLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -64.0
offset_right = 256.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
text = "O triângulo é: Inválido"
label_settings = SubResource("LabelSettings_i6u25")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TrianguloTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -264.0
offset_right = 128.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
expand_mode = 1

[connection signal="text_changed" from="BoxContainer/IndexX" to="." method="_on_index_x_text_changed"]
[connection signal="text_changed" from="BoxContainer/IndexY" to="." method="_on_index_y_text_changed"]
[connection signal="text_changed" from="BoxContainer/IndexZ" to="." method="_on_index_z_text_changed"]
[connection signal="pressed" from="CalcularButton" to="." method="_on_calcular_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
